{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 27,
  "lineage": "e5257ca2-804d-fdda-4dcc-0106b11cf3a6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "sn-apimv1-internal-injection",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/virtualNetworks/vnet-dev-weu-EMT-0001/subnets/sn-apimv1-internal-injection",
            "network_security_group_id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/networkSecurityGroups/nsg-dev-weu-EMT-0001-apim-internal",
            "subnet_id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/virtualNetworks/vnet-dev-weu-EMT-0001/subnets/sn-apimv1-internal-injection"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nsg.azurerm_network_security_group.this",
            "module.nsg.azurerm_network_security_rule.this",
            "module.resource_group.azurerm_resource_group.this",
            "module.vnet.azurerm_subnet.this",
            "module.vnet.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.nsg[\"apim-internal\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/networkSecurityGroups/nsg-dev-weu-EMT-0001-apim-internal",
            "location": "westeurope",
            "name": "nsg-dev-weu-EMT-0001-apim-internal",
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "sr-out-allow-load-balancer",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sr-in-allow-mgt-apim",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "ApiManagement",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "6390",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sr-in-allow-load-balancer",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "component": "nsg",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "EMT",
              "service": "network",
              "workload": "D0001-EMT"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-dev-weu-EMT-0001-apim-internal",
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "subscription_id": "c5a60aba-12d3-4b3b-8ea9-699fb1e697a9"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.nsg[\"apim-internal\"]",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "sr-in-allow-load-balancer",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "6390",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/networkSecurityGroups/nsg-dev-weu-EMT-0001-apim-internal/securityRules/sr-in-allow-load-balancer",
            "name": "sr-in-allow-load-balancer",
            "network_security_group_name": "nsg-dev-weu-EMT-0001-apim-internal",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "sr-in-allow-load-balancer",
            "network_security_group_name": "nsg-dev-weu-EMT-0001-apim-internal",
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "subscription_id": "c5a60aba-12d3-4b3b-8ea9-699fb1e697a9"
          },
          "dependencies": [
            "module.nsg.azurerm_network_security_group.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        },
        {
          "index_key": "sr-in-allow-mgt-apim",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/networkSecurityGroups/nsg-dev-weu-EMT-0001-apim-internal/securityRules/sr-in-allow-mgt-apim",
            "name": "sr-in-allow-mgt-apim",
            "network_security_group_name": "nsg-dev-weu-EMT-0001-apim-internal",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "source_address_prefix": "ApiManagement",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "sr-in-allow-mgt-apim",
            "network_security_group_name": "nsg-dev-weu-EMT-0001-apim-internal",
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "subscription_id": "c5a60aba-12d3-4b3b-8ea9-699fb1e697a9"
          },
          "dependencies": [
            "module.nsg.azurerm_network_security_group.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        },
        {
          "index_key": "sr-out-allow-load-balancer",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "Internet",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/networkSecurityGroups/nsg-dev-weu-EMT-0001-apim-internal/securityRules/sr-out-allow-load-balancer",
            "name": "sr-out-allow-load-balancer",
            "network_security_group_name": "nsg-dev-weu-EMT-0001-apim-internal",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "sr-out-allow-load-balancer",
            "network_security_group_name": "nsg-dev-weu-EMT-0001-apim-internal",
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "subscription_id": "c5a60aba-12d3-4b3b-8ea9-699fb1e697a9"
          },
          "dependencies": [
            "module.nsg.azurerm_network_security_group.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_machines[\"linux-app-01\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/networkInterfaces/nic-vm-dev-weu-EMT-0001-app-linux",
            "internal_domain_name_suffix": "vwxanumj4yeuvdwss4pr5kpree.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-01",
                "primary": true,
                "private_ip_address": "10.10.4.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/virtualNetworks/vnet-dev-weu-EMT-0001/subnets/sn-virtual-machines"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "nic-vm-dev-weu-EMT-0001-app-linux",
            "private_ip_address": "10.10.4.5",
            "private_ip_addresses": [
              "10.10.4.5"
            ],
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "tags": {
              "component": "virtual_machine",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "EMT",
              "workload": "D0001-EMT"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-vm-dev-weu-EMT-0001-app-linux",
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "subscription_id": "c5a60aba-12d3-4b3b-8ea9-699fb1e697a9"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.virtual_machines.azurerm_public_ip.this",
            "module.vnet.azurerm_subnet.this",
            "module.vnet.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_machines[\"linux-app-01\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.virtual_machines[\"windows-app-01\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/networkInterfaces/nic-vm-dev-weu-EMT-0001-app-windows",
            "internal_domain_name_suffix": "vwxanumj4yeuvdwss4pr5kpree.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-01",
                "primary": true,
                "private_ip_address": "10.10.4.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/virtualNetworks/vnet-dev-weu-EMT-0001/subnets/sn-virtual-machines"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "nic-vm-dev-weu-EMT-0001-app-windows",
            "private_ip_address": "10.10.4.4",
            "private_ip_addresses": [
              "10.10.4.4"
            ],
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "tags": {
              "component": "virtual_machine",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "EMT",
              "workload": "D0001-EMT"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-vm-dev-weu-EMT-0001-app-windows",
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "subscription_id": "c5a60aba-12d3-4b3b-8ea9-699fb1e697a9"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.virtual_machines.azurerm_public_ip.this",
            "module.vnet.azurerm_subnet.this",
            "module.vnet.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_machines[\"windows-app-01\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "sn-apimv1-internal-injection",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/virtualNetworks/vnet-dev-weu-EMT-0001/subnets/sn-apimv1-internal-injection",
            "name": "sn-apimv1-internal-injection",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "virtual_network_name": "vnet-dev-weu-EMT-0001"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "sn-apimv1-internal-injection",
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "subscription_id": "c5a60aba-12d3-4b3b-8ea9-699fb1e697a9",
            "virtual_network_name": "vnet-dev-weu-EMT-0001"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.vnet.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "sn-private-endpoint",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/virtualNetworks/vnet-dev-weu-EMT-0001/subnets/sn-private-endpoint",
            "name": "sn-private-endpoint",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "virtual_network_name": "vnet-dev-weu-EMT-0001"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "sn-private-endpoint",
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "subscription_id": "c5a60aba-12d3-4b3b-8ea9-699fb1e697a9",
            "virtual_network_name": "vnet-dev-weu-EMT-0001"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.vnet.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "sn-virtual-machines",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/virtualNetworks/vnet-dev-weu-EMT-0001/subnets/sn-virtual-machines",
            "name": "sn-virtual-machines",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "virtual_network_name": "vnet-dev-weu-EMT-0001"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "sn-virtual-machines",
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "subscription_id": "c5a60aba-12d3-4b3b-8ea9-699fb1e697a9",
            "virtual_network_name": "vnet-dev-weu-EMT-0001"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.vnet.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "sn-web-integration",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/virtualNetworks/vnet-dev-weu-EMT-0001/subnets/sn-web-integration",
            "name": "sn-web-integration",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "virtual_network_name": "vnet-dev-weu-EMT-0001"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "sn-web-integration",
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "subscription_id": "c5a60aba-12d3-4b3b-8ea9-699fb1e697a9",
            "virtual_network_name": "vnet-dev-weu-EMT-0001"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this",
            "module.vnet.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d106aead-f689-4a09-8ed2-979f1fa9f124",
            "id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/virtualNetworks/vnet-dev-weu-EMT-0001",
            "location": "westeurope",
            "name": "vnet-dev-weu-EMT-0001",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "subnet": [
              {
                "address_prefixes": [
                  "10.10.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/virtualNetworks/vnet-dev-weu-EMT-0001/subnets/sn-web-integration",
                "name": "sn-web-integration",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.10.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/virtualNetworks/vnet-dev-weu-EMT-0001/subnets/sn-private-endpoint",
                "name": "sn-private-endpoint",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.10.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/virtualNetworks/vnet-dev-weu-EMT-0001/subnets/sn-apimv1-internal-injection",
                "name": "sn-apimv1-internal-injection",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/c5a60aba-12d3-4b3b-8ea9-699fb1e697a9/resourceGroups/rg-dev-weu-EMT-0001/providers/Microsoft.Network/networkSecurityGroups/nsg-dev-weu-EMT-0001-apim-internal"
              }
            ],
            "tags": {
              "component": "vnet",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "EMT",
              "service": "network",
              "workload": "D0001-EMT"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-dev-weu-EMT-0001",
            "resource_group_name": "rg-dev-weu-EMT-0001",
            "subscription_id": "c5a60aba-12d3-4b3b-8ea9-699fb1e697a9"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    }
  ]
}